# librocket-deps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build.sh  combine_static_libraries.cmd  combine_static_libraries.sh  librocket-deps.cpp
cmake/: FindSDL2.cmake
